kotlin/programming-kotlin_code/delegation/version4/output/projecterror.output
projecterror.kts:32:29: error: type mismatch: inferred type is Projecterror.Manager but Projecterror.JavaProgrammer was expected
val coder: JavaProgrammer = doe //ERROR: type mismatch
                            ^
